@@ -2,10 +2,12 @@ DIST drumkv1-0.3.3.tar.gz 135246 SHA256 554270e967eb6f36fdd37efd4b7773216fa6cf1a
 DIST drumkv1-0.3.4.tar.gz 200453 SHA256 46513033de490522b93fad854f31ffc6c83878082f5d54a53628081ce988916a SHA512 dad1a21191f2aefae162838fb171ba9041f8e4f522e21e169157103c2daf2ef6109bc663cb7140a357bc531dcac69826c2c710a768ef6b938e31f4ba2546e51d WHIRLPOOL 7bbac107f71096ba7290df5d6e662a1caa35806c367c8492db1f13647e5bf7c3b3e1dd036fb59758f85981908bbaa71168beecbe6ea6037410e2908d59b7539b
 DIST drumkv1-0.3.5.tar.gz 203074 SHA256 bce07ebcfaf4adf395ac941d76f681275a634957ca8fb0fd5f4df25a6950aa88 SHA512 5504a82631b4803988ae743c0de100438f38414f7f8dc4257b5a94fbfd74deeac45cd7e9bfc1599c78f9a9395a1c99b76a250c75430c87f0a2edb89b69cd7e9f WHIRLPOOL db138bfa1f393edb1d9a27d210372d15db13329d5b9cce08e4739a602df6e741d44d7848ddccf46e45767d8cc9199bd0dd4965ebc844fbafa9c5c1b9719bee4a
 DIST drumkv1-0.3.6.tar.gz 208578 SHA256 56fa0aff7ba83d4acb860d3f846f5fb55af8acb5bb1c63caef035239acaaf98e SHA512 f108d2168891e80d4e4629e7feb978175ff5de5d10f8846d0b42a908e3d6a907918826233fb5ec438d75a1d5252d87bf36b2a60d37e0aa60b1b153997789474a WHIRLPOOL 027db076ac5e5e6871a50a0d67e436c5e9f81e54a10c39d08c5a6324c121b46f1588007939c4d5195afcae3af532719508bef1c29185b1b082d6cf4aff069acd
+DIST drumkv1-0.4.0.tar.gz 211627 SHA256 ff7e827b10b3e1d5dbff468adfe4a0bceea4887cfe07a81fe01930b32325122e SHA512 bd90d80e2cdd71c793e930fb3370099a14af6e14d333976c5934daf2d29fde4f6f034d2940de18423c178f6166e43929195675da2ae437f6f1d82b8e91d73473 WHIRLPOOL 51bee70c402d5824fdb2724387ba8afa1eeccd808b5a5f82ea1b3a0e7176c2e0890c3eac77f222055cbd10c3db5b738d76e650726ef6f94e3fcab2a1803962fe
 EBUILD drumkv1-0.3.3.ebuild 1636 SHA256 14e876dea11dd52f585ebf2c0c1ec6b5810b2e664f7165fe6ee840cd1013de40 SHA512 a0ad5905c68a7d12a1f96388e4e2f13a26054be4f7d471258d91352e89e0b8983e487ff555c7481530fb0231f79ac0f8ec82abbfa40563a74f375ab0847575fa WHIRLPOOL eaab85a3046b969788bf6f297209289ffde59292cbb3ecf10e27733ca86e0efa6a37b7b5386c46245602d40ad1dbf2a27ebf8e3e958202f88c4f4506ee2df094
 EBUILD drumkv1-0.3.4.ebuild 1746 SHA256 79877470e493f0d35456a13db992012bab197bcb9a490b08e2959429767772f8 SHA512 a7c91a87a829abb4e12d0bd3680639dfd6b998cf5dfe42fa329539c1ffc669640ea9d622fda35d1162bf7f0ff02068c946ca8d20c69b97d0aaeee1ff6ef01da4 WHIRLPOOL 4cbe1abf0c4e99f6087ab021ac7f716bd5d6ab08962452bac30a25ab1f7c0b6a9780051c021f142038d62454bbd13cad22e06e7cb8e69269dadb7247e3832222
 EBUILD drumkv1-0.3.5.ebuild 1746 SHA256 79877470e493f0d35456a13db992012bab197bcb9a490b08e2959429767772f8 SHA512 a7c91a87a829abb4e12d0bd3680639dfd6b998cf5dfe42fa329539c1ffc669640ea9d622fda35d1162bf7f0ff02068c946ca8d20c69b97d0aaeee1ff6ef01da4 WHIRLPOOL 4cbe1abf0c4e99f6087ab021ac7f716bd5d6ab08962452bac30a25ab1f7c0b6a9780051c021f142038d62454bbd13cad22e06e7cb8e69269dadb7247e3832222
 EBUILD drumkv1-0.3.6.ebuild 1746 SHA256 6ef0f4913b3a1d7e1f13938e93dfb407f143a536a2f0d6b576fd35501f0e9b00 SHA512 32df1a30eba91abd0e41fff02692ca870bc5ea6c8538c969c58897349c6ca800d57f61ee2d666bd7ebdd93d4283f646c4c1e53410340d330ddb8cad51bfc765b WHIRLPOOL 839c03ccf97d1805478862bbc6581b0881e0cbb658c7195ddde8be1fb9deea7541101eab4e1828ba78fb44a50e2a0cdd7b473aec132e77134349d3bf53f01596
+EBUILD drumkv1-0.4.0.ebuild 1746 SHA256 6ef0f4913b3a1d7e1f13938e93dfb407f143a536a2f0d6b576fd35501f0e9b00 SHA512 32df1a30eba91abd0e41fff02692ca870bc5ea6c8538c969c58897349c6ca800d57f61ee2d666bd7ebdd93d4283f646c4c1e53410340d330ddb8cad51bfc765b WHIRLPOOL 839c03ccf97d1805478862bbc6581b0881e0cbb658c7195ddde8be1fb9deea7541101eab4e1828ba78fb44a50e2a0cdd7b473aec132e77134349d3bf53f01596
 EBUILD drumkv1-9999.ebuild 1746 SHA256 79877470e493f0d35456a13db992012bab197bcb9a490b08e2959429767772f8 SHA512 a7c91a87a829abb4e12d0bd3680639dfd6b998cf5dfe42fa329539c1ffc669640ea9d622fda35d1162bf7f0ff02068c946ca8d20c69b97d0aaeee1ff6ef01da4 WHIRLPOOL 4cbe1abf0c4e99f6087ab021ac7f716bd5d6ab08962452bac30a25ab1f7c0b6a9780051c021f142038d62454bbd13cad22e06e7cb8e69269dadb7247e3832222
-MISC ChangeLog 1843 SHA256 5c9243cae94e210c97aa46b61d7bbb6c73a9dc336d985cd24e6b7f0c6efe773a SHA512 111f425dd7f461fbf18ebc1b4a0d779a7edc4eebb71f7ae621320bdb36f4b8ef5e08b2a1f026633be16abccae9ac0b4b3ac92766f8d8ced029781740dc86720c WHIRLPOOL d14a5f45a8f5b04d55dcffda14e68ab1c45e8cb54636ad0d4fa370146f13c526ed1fc68beec7477a46b38f8cf7b2cce1f4804a45a5ce60d9fb01c56738cbac28
+MISC ChangeLog 1970 SHA256 2f93870fa999112edd633564ffc3619cad31b7bbb9639103db74a22671020443 SHA512 f7769700e354d7c5c3f2879f0c84c7656609ceaa184ccc205738c1f63388b2d5334496906958df45c43b00a7dbd2ace6571f1b7f2c536156025d6f410095430b WHIRLPOOL 509c2b16769634fac3fb69f372febcb7a0f0d1146340942eb95c808483566fa250ecd8ea00e3e80b578de0b7b7a44f59dee14ad35dc911e8de323d6dcfb1e05a
 MISC metadata.xml 443 SHA256 5e4f2487b24581591d2196bfb8f55855d54003e43d9a1d193427def374e49f0a SHA512 d79095bdea6e89aa6c85edab36e47b085a48f5543aadfc02c026e007b03b3c416448d6d508b68975d8069590f3f6ca4a5ee25e8356c309adf550278d9ac05d22 WHIRLPOOL 247e41d25cf355611945b3350ddb06fae65d2ca63ba9ff49e589e6a573969d64b752607debc80862cbe54e7b6b4d828ffa22646b7adce7af223e6a0c1828c2ab
